bpo-30953: Improve error messages and add tests for jumping (GH-6196)

into/out of an except block.